<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/expense_detail_table_row">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/loan_detail_name"/>
        <EditText
            android:id="@+id/loan_detail_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/expense_detail_table_row">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/loan_detail_amount" />
        <EditText
            android:id="@+id/loan_detail_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="2"
            android:maxLength="9" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/expense_detail_table_row">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/loan_detail_interest" />
        <EditText
            android:id="@+id/loan_detail_interest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="2"
            android:maxLength="5" />
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/expense_detail_table_row">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="right"
            android:layout_weight="1"
            android:text="@string/loan_detail_amortization" />
        <EditText
            android:id="@+id/loan_detail_amortization"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="2"
            android:maxLength="9" />
    </LinearLayout>

    <TextView
        android:id="@+id/loan_detail_make_payment_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textStyle="italic"
        android:text="@string/loan_detail_make_payment_layout_message"/>

    <Button
        android:id="@+id/loan_detail_make_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loan_make_payment"
        android:layout_gravity="center"
        style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>