<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal">

    <ImageButton
        android:id="@+id/custom_action_bar_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_close_white_48dp"
        android:contentDescription="@string/custom_action_bar_close"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/custom_action_bar_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_delete_white_48dp"
        android:contentDescription="@string/custom_action_bar_delete"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/custom_action_bar_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_done_white_48dp"
        android:contentDescription="@string/custom_action_bar_done"
        android:background="@android:color/transparent"/>

</RelativeLayout>