<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/statistics_control_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/statistics_button_forwards"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/statistics_forward_button"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <Button
            android:id="@+id/statistics_button_backwards"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/statistics_back_button"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/statistics_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/statistics_control_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/statistics_table_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">
            </TableLayout>

            <Button
                android:id="@+id/statistics_button_clear_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/clear_history"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>